public/css/base.css
/* ... */
.products-preview .preview {
  display: none;
  padding: 2rem;
  text-align: center;
  background: #fff;
  position: relative;
  margin: 2rem;
  width: 40rem;
}

.preview.active {
  display: block;
}
.products-preview .preview.active {
  display: inline-block;
}

.products-preview .preview img {
  height: 30rem;
}

.products-preview .preview .closeIcon {
  position: absolute;
  top: 1rem;
  right: 1.5rem;
  cursor: pointer;
  color: #444;
  font-size: 4rem;
  width: 20px;
  height: auto;
}
.fa-times {
  cursor: pointer;
}
.products-preview .preview .fa-times:hover {
  transform: rotate(90deg);
}

.products-preview .preview h3 {
  color: #444;
  padding: 0.5rem 0;
  font-size: 2.5rem;
}

.products-preview .preview .stars {
  padding: 1rem 0;
  font-size: 1.7rem;
}

.products-preview .preview .stars i {
  color: #27ae60;
}

.products-preview .preview .stars span {
  color: #999;
}

.products-preview .preview p {
  line-height: 1.5;
  padding: 1rem 0;
  font-size: 1.6rem;
  color: #777;
}

.products-preview .preview .price {
  padding: 1rem 0;
  font-size: 2.5rem;
  color: #27ae60;
}

.products-preview .preview .buttons {
  display: flex;
  gap: 1.5rem;
  flex-wrap: wrap;
  margin-top: 1rem;
}

.products-preview .preview .buttons a {
  flex: 1 1 16rem;
  padding: 1rem;
  font-size: 1.8rem;
  color: #444;
  border: 0.1rem solid #444;
}

.products-preview .preview .buttons a.cart {
  background: #444;
  color: #fff;
}

.products-preview .preview .buttons a.cart:hover {
  background: #111;
}

.products-preview .preview .buttons a.buy:hover {
  background: #444;
  color: #fff;
}

@media (max-width: 991px) {
  html {
    font-size: 55%;
  }
}

@media (max-width: 768px) {
  .products-preview .preview img {
    height: 25rem;
  }
  .healthcheck_form {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: end;
    flex-wrap: wrap;
}
}

@media (max-width: 450px) {
  html {
    font-size: 50%;
  }
}

.projects_btn {
  width: fit-content;
  background-color: transparent;
  color: rgb(59, 59, 59);
}



/* Box Containers with 4 boxex */
.fourBoxContainer{

  display: flex;
  flex-wrap: wrap;
  justify-content: center;
  align-items: center;
  gap: 8rem;
}

.healthcheck_parent{
  margin: 5rem auto;
  display: flex;
  justify-content: center;
  align-items: center;
  flex-direction: column;
}
.healthcheck_form{
  display: flex;
  flex-direction: row;
  justify-content: center;
  align-items: end;
  flex-wrap: wrap;
}
.healthcheck_title{
  width: 85ch;
  margin-bottom: 45px;
  margin-top: 10rem;
}
.healthcheck_title h2{
  margin-bottom: 20px;
}
.healthcheck_textarea{
  height: 40px !important;
}
.send_message{
  background: rgba(128,29,84,0.8) !important;
  color: white !important;
  margin-top: 4rem !important;
}
.dropdown {
  position: relative;
  display: inline-block;
  height: 40px;
  width: fit-content;
  margin-right: 40px;
  padding: 10px 15px;
  font-size: 13px;

}
.select_parent{
  display: relative;
  width: fit-content;
}
.mt-150{
  margin-top: 140px !important;
}

#senderemail{
  width
}
@media (max-width: 768px) {
  .healthcheck_title{
    width: fit-content;
    margin-bottom: 45px;
    text-align: center;
    margin-top: 14.5rem;
  }
  .healthcheck_parent{
    margin: 0 30px;
  }
  .healthcheck_form input{
    margin-bottom: 30px;
    text-align: center;
  }
  .select_parent{
    text-align: center;
  }
  #message-dropdown{
    margin-right: 0;
  }
  #senderemail{
    width: 100% !important;
  }
  #message{
    width: 100% !important;
  }
}



/* Carousel */
.glide{
  margin: 0 auto;
  padding: 5rem;
}
.box_parent{
  display: flex;
  justify-content: center;
  align-items: center;
  gap: 1rem;
  flex-direction: column;
}
.glide__arrows{
  display: flex;
  justify-content: center;
  align-items: center;
  gap: 2rem;

}
.glide__arrow{
  width: 150px;
}


.box_title{
  font-size: 24px;
  height: 7.5rem;
}

.btn_launch{
  height: 3.5rem;
  width: fit-content;
  display: flex;
  justify-content: center;
  align-items: center;
  background-color: #cfa144;
  border-radius: 10px;
  margin-top: 4rem;
}

.btn_launch a {
  color: inherit; /* blue colors for links too */
  text-decoration: inherit; /* no underline */
  font-weight: 600;
}

/* custom navbar */
.custom_main {
  position: relative;
  height: 100vh;
}

.custom_main__bg {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  -o-object-fit: cover;
  object-fit: cover;
  -o-object-position: center;
  object-position: center;
  z-index: -1;

}

.custom_search,
.custom_login {
  position: fixed;
  left: 0;
  top: 0;
  width: 100%;
  height: 100%;
  z-index: var(--z-modal);
  background-color: hsla(230, 75%, 15%, 0.1);
  -webkit-backdrop-filter: blur(24px);
  backdrop-filter: blur(24px);
  padding: 8rem 1.5rem 0;
  opacity: 0;
  pointer-events: none;
  transition: opacity 0.2s;
}

.custom_search__close,
.custom_login__close {
  position: absolute;
  top: 2rem;
  right: 2rem;
  font-size: 1.5rem;
  color: var(--title-color);
  cursor: pointer;
}

/*=============== HEADER & NAV ===============*/
.custom_header {
  position: fixed;
  top: 0;
  left: 0;
  width: 100%;
  background-color: var(--body-color);
  box-shadow: 0 2px 16px hsla(230, 75%, 32%, 0.15);
  z-index: var(--z-fixed);
  padding: 0 2rem;
}

.custom_nav {
  height: var(--header-height);
  display: flex;
  justify-content: space-between;
  align-items: center;
}

.custom_nav__logo {
  color: var(--title-color);
  font-weight: var(--font-semi-bold);
  transition: color 0.2s;
}

.custom_nav__menu {
  /* Navigation for mobile devices */
}

@media screen and (max-width: 1023px) {
  .custom_nav__menu {
    position: fixed;
    top: -100%;
    left: 0;
    background-color: var(--body-color);
    box-shadow: 0 8px 16px hsla(230, 75%, 32%, 0.15);
    width: 100%;
    padding-block: 4.5rem 4rem;
    transition: top 0.2s;
  }
}

.custom_nav__list {
  display: flex;
  flex-direction: column;
  row-gap: 2.5rem;
  text-align: center;
}
/* ... */

